--- a/plugins/quickinspector/quickinspectorwidget.ui
+++ b/plugins/quickinspector/quickinspectorwidget.ui
@@ -132,6 +132,22 @@
     </widget>
    </item>
   </layout>
+  <action name="actionSaveAsImage">
+   <property name="text">
+    <string>Save as &amp;Image...</string>
+   </property>
+   <property name="toolTip">
+    <string>Save current frame as image.</string>
+   </property>
+  </action>
+  <action name="actionSaveAsImageWithDecoration">
+   <property name="text">
+    <string>Save as &amp;Image (with decoration)...</string>
+   </property>
+   <property name="toolTip">
+    <string>Save current frame with decoration rendered as image.</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
