--- a/launcher/ui/attachdialog.ui
+++ b/launcher/ui/attachdialog.ui
@@ -27,7 +27,16 @@
      </widget>
      <widget class="QWidget" name="listViewPage">
       <layout class="QVBoxLayout" name="verticalLayout_2">
-       <property name="margin">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
         <number>0</number>
        </property>
        <item>
@@ -41,53 +50,70 @@
         </widget>
        </item>
        <item>
-        <layout class="QFormLayout" name="formLayout">
-         <item row="0" column="0">
-          <widget class="QLabel" name="label_2">
-           <property name="text">
-            <string>Pro&amp;be:</string>
-           </property>
-           <property name="buddy">
-            <cstring>probeBox</cstring>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <widget class="QComboBox" name="probeBox"/>
-         </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="label">
-           <property name="text">
-            <string>&amp;Access mode:</string>
-           </property>
-           <property name="buddy">
-            <cstring>accessMode</cstring>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QComboBox" name="accessMode">
-           <property name="currentIndex">
-            <number>0</number>
-           </property>
-           <item>
-            <property name="text">
-             <string>Out-of-process, local debugging only</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Out-of-process, remote debugging enabled</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>In-process</string>
-            </property>
-           </item>
-          </widget>
-         </item>
-        </layout>
+        <widget class="QWidget" name="settingsWidget" native="true">
+         <layout class="QVBoxLayout" name="verticalLayout_3">
+          <property name="leftMargin">
+           <number>0</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
+          <item>
+           <layout class="QFormLayout" name="formLayout">
+            <item row="0" column="0">
+             <widget class="QLabel" name="label_2">
+              <property name="text">
+               <string>Pro&amp;be:</string>
+              </property>
+              <property name="buddy">
+               <cstring>probeBox</cstring>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="1">
+             <widget class="QComboBox" name="probeBox"/>
+            </item>
+            <item row="1" column="0">
+             <widget class="QLabel" name="label">
+              <property name="text">
+               <string>&amp;Access mode:</string>
+              </property>
+              <property name="buddy">
+               <cstring>accessMode</cstring>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QComboBox" name="accessMode">
+              <property name="currentIndex">
+               <number>0</number>
+              </property>
+              <item>
+               <property name="text">
+                <string>Out-of-process, local debugging only</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>Out-of-process, remote debugging enabled</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>In-process</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+           </layout>
+          </item>
+         </layout>
+         <zorder></zorder>
+         <zorder></zorder>
+        </widget>
        </item>
       </layout>
      </widget>
