--- a/ui/resources/ui.qrc
+++ b/ui/resources/ui.qrc
@@ -41,9 +41,13 @@
         <file>gammaray/kdab-gammaray-logo.png</file>
         <file>gammaray/kdablogo160.png</file>
         <file>gammaray/kdabproducts.png</file>
-        <file>gammaray/splashscreen.png</file>
 
         <!-- Light -->
+
+        <!-- UI pixmaps -->
+        <file>gammaray/ui/light/pixmaps/splashscreen.png</file>
+        <file>gammaray/ui/light/pixmaps/splashscreen@2x.png</file>
+        <file>gammaray/ui/light/pixmaps/splashscreen@3x.png</file>
 
         <!-- UI icons -->
         <file>gammaray/ui/light/icons/active-focus.png</file>
