--- a/ui/resources/ui.qrc
+++ b/ui/resources/ui.qrc
@@ -36,8 +36,6 @@
         <file>gammaray/GammaRay-512x512.png</file>
         <file>gammaray/GammaRay-512x512@2x.png</file>
 
-        <file>gammaray/GammaRay-Trademark-medium.png</file>
-        <file>gammaray/GammaRay-Trademark-small.png</file>
         <file>gammaray/kdab-gammaray-logo.png</file>
 
         <!-- Light -->
@@ -46,6 +44,10 @@
         <file>gammaray/ui/light/pixmaps/watermark.png</file>
         <file>gammaray/ui/light/pixmaps/watermark@2x.png</file>
         <file>gammaray/ui/light/pixmaps/watermark@3x.png</file>
+
+        <file>gammaray/ui/light/pixmaps/gammaray-trademark.png</file>
+        <file>gammaray/ui/light/pixmaps/gammaray-trademark@2x.png</file>
+        <file>gammaray/ui/light/pixmaps/gammaray-trademark@3x.png</file>
 
         <file>gammaray/ui/light/pixmaps/splashscreen.png</file>
         <file>gammaray/ui/light/pixmaps/splashscreen@2x.png</file>
