--- a/plugins/quickinspector/textureextension/texturetab.ui
+++ b/plugins/quickinspector/textureextension/texturetab.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>661</width>
+    <width>1172</width>
     <height>300</height>
    </rect>
   </property>
@@ -38,45 +38,23 @@
       <item>
        <widget class="QLabel" name="caption">
         <property name="text">
-         <string>&lt;b&gt;Identified Problems&lt;/b&gt;</string>
+         <string>&lt;b&gt;Identified Problems:&lt;/b&gt;</string>
         </property>
         <property name="textFormat">
          <enum>Qt::RichText</enum>
         </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="textureWasteLabel">
-        <property name="text">
-         <string>Texture Waste:</string>
+        <property name="alignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="unicolorWarningLabel">
+       <widget class="QLabel" name="infoLabel">
         <property name="text">
-         <string>Unicolor texture, use rectangle instead.</string>
+         <string/>
         </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="horizontalBorderImageLabel">
-        <property name="text">
-         <string>Border Image</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="verticalBorderImageLabel">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="fullTransparencyWarningLabel">
-        <property name="text">
-         <string>Texture is fully transparent. Use margins and anchoring instead of empty spacers.</string>
+        <property name="textFormat">
+         <enum>Qt::RichText</enum>
         </property>
        </widget>
       </item>
