--- a/ui/tools/objectinspector/bindingtab.ui
+++ b/ui/tools/objectinspector/bindingtab.ui
@@ -12,20 +12,24 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QTreeView" name="bindingView">
+    <widget class="GammaRay::DeferredTreeView" name="bindingView">
      <property name="contextMenuPolicy">
       <enum>Qt::CustomContextMenu</enum>
      </property>
      <property name="uniformRowHeights">
       <bool>true</bool>
      </property>
-     <attribute name="headerDefaultSectionSize">
-      <number>200</number>
-     </attribute>
     </widget>
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>GammaRay::DeferredTreeView</class>
+   <extends>QTreeView</extends>
+   <header location="global">ui/deferredtreeview.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
