Elide source locations on the left

--- a/ui/tools/objectinspector/bindingtab.ui
+++ b/ui/tools/objectinspector/bindingtab.ui
@@ -16,6 +16,9 @@
      <property name="contextMenuPolicy">
       <enum>Qt::CustomContextMenu</enum>
      </property>
+     <property name="textElideMode">
+      <enum>Qt::ElideLeft</enum>
+     </property>
      <property name="uniformRowHeights">
       <bool>true</bool>
      </property>
