Add paint analyzer for the Qt Quick software renderer
This is a very dirty way of accessing the software renderer, and we can
so far only do full scene repaints, not analyze just the repaint of the
previous damage region.

--- a/plugins/quickinspector/quickinspectorwidget.ui
+++ b/plugins/quickinspector/quickinspectorwidget.ui
@@ -148,6 +148,17 @@
     <string>Save current frame with decoration rendered as image.</string>
    </property>
   </action>
+  <action name="actionAnalyzePainting">
+   <property name="text">
+    <string>Analyze Painting...</string>
+   </property>
+   <property name="toolTip">
+    <string>Analyzer software renderer paint operations.</string>
+   </property>
+   <property name="shortcut">
+    <string>F9</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
