Show a few more details for image/pixmap paint operations
This could be extended to cover all multi-argument commands.

--- a/ui/paintanalyzerwidget.ui
+++ b/ui/paintanalyzerwidget.ui
@@ -26,8 +26,8 @@
        </item>
        <item>
         <widget class="GammaRay::DeferredTreeView" name="commandView">
-         <property name="rootIsDecorated">
-          <bool>false</bool>
+         <property name="indentation">
+          <number>10</number>
          </property>
          <property name="sortingEnabled">
           <bool>false</bool>
