Add object navigation to the paint analyzer
When analyzing the rendering of qt quick scenes using the software
renderer, the paint analyzer now is able to offer object navigation to
the QQuickItem a QPainter-command originates from.

--- a/ui/paintanalyzerwidget.ui
+++ b/ui/paintanalyzerwidget.ui
@@ -30,6 +30,9 @@
         </item>
         <item>
          <widget class="GammaRay::DeferredTreeView" name="commandView">
+          <property name="contextMenuPolicy">
+           <enum>Qt::CustomContextMenu</enum>
+          </property>
           <property name="indentation">
            <number>10</number>
           </property>
