--- a/plugins/positioning/positioningwidget.ui
+++ b/plugins/positioning/positioningwidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>773</width>
-    <height>139</height>
+    <width>1131</width>
+    <height>150</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="topLayout">
@@ -20,92 +20,13 @@
    </item>
    <item>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="2" column="6">
-      <widget class="QLabel" name="label_9">
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
        <property name="text">
-        <string>Ma&amp;gnetic variation:</string>
+        <string>&amp;Latitude:</string>
        </property>
        <property name="buddy">
-        <cstring>magneticVariation</cstring>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="7">
-      <widget class="QSpinBox" name="horizontalAccuracy">
-       <property name="suffix">
-        <string>m</string>
-       </property>
-       <property name="maximum">
-        <number>100000</number>
-       </property>
-       <property name="singleStep">
-        <number>10</number>
-       </property>
-       <property name="value">
-        <number>10</number>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="label_8">
-       <property name="text">
-        <string>&amp;Direction:</string>
-       </property>
-       <property name="buddy">
-        <cstring>direction</cstring>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="8">
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>17</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item row="1" column="6">
-      <widget class="QLabel" name="label_7">
-       <property name="text">
-        <string>Accurac&amp;y:</string>
-       </property>
-       <property name="buddy">
-        <cstring>verticalAccuracy</cstring>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label_3">
-       <property name="text">
-        <string>Al&amp;titude:</string>
-       </property>
-       <property name="buddy">
-        <cstring>altitude</cstring>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="6">
-      <widget class="QLabel" name="label_4">
-       <property name="text">
-        <string>Acc&amp;uracy:</string>
-       </property>
-       <property name="buddy">
-        <cstring>horizontalAccuracy</cstring>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="2">
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>&amp;Longitude:</string>
-       </property>
-       <property name="buddy">
-        <cstring>longitude</cstring>
+        <cstring>latitude</cstring>
        </property>
       </widget>
      </item>
@@ -128,98 +49,13 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="4">
-      <widget class="QLabel" name="label_5">
+     <item row="0" column="2">
+      <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Speed:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>&amp;Latitude:</string>
+        <string>&amp;Longitude:</string>
        </property>
        <property name="buddy">
-        <cstring>latitude</cstring>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QSpinBox" name="direction">
-       <property name="wrapping">
-        <bool>true</bool>
-       </property>
-       <property name="suffix">
-        <string>°</string>
-       </property>
-       <property name="maximum">
-        <number>360</number>
-       </property>
-       <property name="singleStep">
-        <number>5</number>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QSpinBox" name="altitude">
-       <property name="suffix">
-        <string>m</string>
-       </property>
-       <property name="minimum">
-        <number>-500</number>
-       </property>
-       <property name="maximum">
-        <number>10000</number>
-       </property>
-       <property name="singleStep">
-        <number>50</number>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="4">
-      <widget class="QLabel" name="label_6">
-       <property name="text">
-        <string>Speed:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="7">
-      <widget class="QSpinBox" name="magneticVariation">
-       <property name="suffix">
-        <string>°</string>
-       </property>
-       <property name="maximum">
-        <number>360</number>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="7">
-      <widget class="QSpinBox" name="verticalAccuracy">
-       <property name="suffix">
-        <string>m</string>
-       </property>
-       <property name="maximum">
-        <number>1000</number>
-       </property>
-       <property name="singleStep">
-        <number>10</number>
-       </property>
-       <property name="value">
-        <number>10</number>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="5">
-      <widget class="QDoubleSpinBox" name="horizontalSpeed">
-       <property name="suffix">
-        <string>m/s</string>
-       </property>
-       <property name="maximum">
-        <double>100.000000000000000</double>
-       </property>
-       <property name="singleStep">
-        <double>0.500000000000000</double>
+        <cstring>longitude</cstring>
        </property>
       </widget>
      </item>
@@ -245,6 +81,121 @@
        </property>
       </widget>
      </item>
+     <item row="0" column="4">
+      <widget class="QLabel" name="label_5">
+       <property name="text">
+        <string>Speed:</string>
+       </property>
+       <property name="buddy">
+        <cstring>horizontalSpeed</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="5">
+      <widget class="QDoubleSpinBox" name="horizontalSpeed">
+       <property name="suffix">
+        <string>m/s</string>
+       </property>
+       <property name="maximum">
+        <double>100.000000000000000</double>
+       </property>
+       <property name="singleStep">
+        <double>0.500000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="6">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>Acc&amp;uracy:</string>
+       </property>
+       <property name="buddy">
+        <cstring>horizontalAccuracy</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="7">
+      <widget class="QSpinBox" name="horizontalAccuracy">
+       <property name="suffix">
+        <string>m</string>
+       </property>
+       <property name="maximum">
+        <number>100000</number>
+       </property>
+       <property name="singleStep">
+        <number>10</number>
+       </property>
+       <property name="value">
+        <number>10</number>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="8">
+      <widget class="QLabel" name="label_10">
+       <property name="text">
+        <string>Timestamp:</string>
+       </property>
+       <property name="buddy">
+        <cstring>timestamp</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="9">
+      <widget class="QDateTimeEdit" name="timestamp">
+       <property name="displayFormat">
+        <string>yyyy-MM-dd hh:mm:ss.zzz t</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="10">
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>17</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Al&amp;titude:</string>
+       </property>
+       <property name="buddy">
+        <cstring>altitude</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QSpinBox" name="altitude">
+       <property name="suffix">
+        <string>m</string>
+       </property>
+       <property name="minimum">
+        <number>-500</number>
+       </property>
+       <property name="maximum">
+        <number>10000</number>
+       </property>
+       <property name="singleStep">
+        <number>50</number>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="4">
+      <widget class="QLabel" name="label_6">
+       <property name="text">
+        <string>Speed:</string>
+       </property>
+       <property name="buddy">
+        <cstring>verticalSpeed</cstring>
+       </property>
+      </widget>
+     </item>
      <item row="1" column="5">
       <widget class="QDoubleSpinBox" name="verticalSpeed">
        <property name="suffix">
@@ -255,6 +206,78 @@
        </property>
        <property name="singleStep">
         <double>0.500000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="6">
+      <widget class="QLabel" name="label_7">
+       <property name="text">
+        <string>Accurac&amp;y:</string>
+       </property>
+       <property name="buddy">
+        <cstring>verticalAccuracy</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="7">
+      <widget class="QSpinBox" name="verticalAccuracy">
+       <property name="suffix">
+        <string>m</string>
+       </property>
+       <property name="maximum">
+        <number>1000</number>
+       </property>
+       <property name="singleStep">
+        <number>10</number>
+       </property>
+       <property name="value">
+        <number>10</number>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_8">
+       <property name="text">
+        <string>&amp;Direction:</string>
+       </property>
+       <property name="buddy">
+        <cstring>direction</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QSpinBox" name="direction">
+       <property name="wrapping">
+        <bool>true</bool>
+       </property>
+       <property name="suffix">
+        <string>°</string>
+       </property>
+       <property name="maximum">
+        <number>360</number>
+       </property>
+       <property name="singleStep">
+        <number>5</number>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="6">
+      <widget class="QLabel" name="label_9">
+       <property name="text">
+        <string>Ma&amp;gnetic variation:</string>
+       </property>
+       <property name="buddy">
+        <cstring>magneticVariation</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="7">
+      <widget class="QSpinBox" name="magneticVariation">
+       <property name="suffix">
+        <string>°</string>
+       </property>
+       <property name="maximum">
+        <number>360</number>
        </property>
       </widget>
      </item>
