ProblemReporter: Add support for problem scans
This commit adds the framework for doing problem scans to the problem
reporter as well as a preliminary UI to start them.
So far, it's missing any start/finished notifications as well as names
and descriptions for the scans.

--- a/ui/tools/problemreporter/problemreporterwidget.ui
+++ b/ui/tools/problemreporter/problemreporterwidget.ui
@@ -24,6 +24,13 @@
      </property>
     </widget>
    </item>
+   <item>
+    <widget class="QPushButton" name="scanButton">
+     <property name="text">
+      <string>Scan for Problems</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <customwidgets>
