Add busy indicator to the ProblemReporter UI
together with the server-side infrastructure to inform about started and
finished problem scans.

--- a/ui/tools/problemreporter/problemreporterwidget.ui
+++ b/ui/tools/problemreporter/problemreporterwidget.ui
@@ -25,6 +25,16 @@
     </widget>
    </item>
    <item>
+    <widget class="QProgressBar" name="progressBar">
+     <property name="maximum">
+      <number>0</number>
+     </property>
+     <property name="value">
+      <number>0</number>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QPushButton" name="scanButton">
      <property name="text">
       <string>Scan for Problems</string>
