Two little changes to problem reporter code
* Call it just "Problems" in the ui
* Set `rootIsDecorated = false` at the problem list

--- a/ui/tools/problemreporter/problemreporterwidget.ui
+++ b/ui/tools/problemreporter/problemreporterwidget.ui
@@ -66,6 +66,9 @@
          <property name="contextMenuPolicy">
           <enum>Qt::CustomContextMenu</enum>
          </property>
+         <property name="rootIsDecorated">
+          <bool>false</bool>
+         </property>
         </widget>
        </item>
        <item>
