--- a/plugins/eventmonitor/eventmonitorwidget.ui
+++ b/plugins/eventmonitor/eventmonitorwidget.ui
@@ -104,17 +104,7 @@
             <number>6</number>
            </property>
            <item>
-            <spacer name="horizontalSpacer">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
+            <widget class="QLineEdit" name="typeSearchLine"/>
            </item>
            <item>
             <widget class="QToolButton" name="recordAllButton">
@@ -131,7 +121,7 @@
             </widget>
            </item>
            <item>
-            <spacer name="horizontalSpacer">
+            <spacer name="horizontalSpacer2">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
