--- a/plugins/eventmonitor/eventmonitorwidget.ui
+++ b/plugins/eventmonitor/eventmonitorwidget.ui
@@ -154,6 +154,9 @@
          </item>
          <item>
           <widget class="GammaRay::DeferredTreeView" name="eventTypeTree">
+           <property name="rootIsDecorated">
+            <bool>false</bool>
+           </property>
            <property name="uniformRowHeights">
             <bool>true</bool>
            </property>
