Implement Object Favorite-ing
Gammaray shows huge lists of object usually but as a user, a person
is often only interest in a small set of objects. It becomes really
hard to switch between two objects.

Favorite-ing aims to make it easier. You can mark an object as favorite
and it will appear in a view above the current itemview. However, this
needs to be added to each itemview individually. This commit only
implements it for the Signals history view.

--- a/plugins/signalmonitor/signalmonitorwidget.ui
+++ b/plugins/signalmonitor/signalmonitorwidget.ui
@@ -71,6 +71,9 @@
     </layout>
    </item>
    <item>
+    <widget class="GammaRay::SignalHistoryFavoritesView" name="favoritesObjectsTreeView"/>
+   </item>
+   <item>
     <widget class="GammaRay::SignalHistoryView" name="objectTreeView">
      <property name="contextMenuPolicy">
       <enum>Qt::CustomContextMenu</enum>
@@ -116,6 +119,11 @@
    <class>GammaRay::SignalHistoryView</class>
    <extends>QTreeView</extends>
    <header>signalhistoryview.h</header>
+  </customwidget>
+  <customwidget>
+   <class>GammaRay::SignalHistoryFavoritesView</class>
+   <extends>QTreeView</extends>
+   <header>signalhistoryfavoritesview.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
